--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 pimpmylog_install_dir: /var/www/pimpmylog
 pimpmylog_repo: https://github.com/potsky/PimpMyLog.git
-pimpmylog_version: master
+pimpmylog_version: 1.7.9
 pimpmylog_grant_all_privs: no
